<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/d_m_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".navigation.DashboardFragment">

    <com.scwang.wave.MultiWaveHeader
        android:id="@+id/d_main_actionBar"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:mwhCloseColor="@color/colorPrimary"
        app:mwhColorAlpha="0.8"
        app:mwhIsRunning="false"
        app:mwhProgress="1"
        app:mwhStartColor="@color/colorPrimary"
        app:mwhVelocity="1"
        app:mwhWaveHeight="60dp"
        app:mwhWaves="MultiWave" />

    <androidx.cardview.widget.CardView
        android:id="@+id/d_m_header_holder"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/colorBackgroundWhite"
        app:cardCornerRadius="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/d_m_header_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/d_m_h_exam_text"
                style="@style/textHeaderStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exam"
                android:textColor="@color/colorPrimaryPartial"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/d_m_module_text"
                style="@style/textHeaderStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:text="@string/module"
                android:textColor="@color/colorPrimaryPartial"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/d_m_h_project_text"
                style="@style/textHeaderStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/project"
                android:textColor="@color/colorPrimaryPartial"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/d_m_module_text"
                app:layout_constraintStart_toEndOf="@+id/d_m_h_exam_text" />

            <TextView
                android:id="@+id/d_m_h_exam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/d_m_h_exam_text"
                app:layout_constraintEnd_toEndOf="@+id/d_m_h_exam_text"
                app:layout_constraintStart_toStartOf="@+id/d_m_h_exam_text"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/d_m_h_project"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/d_m_h_project_text"
                app:layout_constraintEnd_toEndOf="@+id/d_m_h_project_text"
                app:layout_constraintStart_toStartOf="@+id/d_m_h_project_text"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/d_m_h_module"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/d_m_module_text"
                app:layout_constraintEnd_toEndOf="@+id/d_m_module_text"
                app:layout_constraintStart_toStartOf="@+id/d_m_module_text"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/d_m_timeline_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/today_s_timeline"
        android:textColor="@color/colorPrimaryPartial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/d_main_actionBar" />

    <TextView
        android:id="@+id/d_m_timeline_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Mon, Oct 22, 2020"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/d_m_timeline_text"
        app:layout_constraintTop_toBottomOf="@+id/d_m_timeline_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/d_m_recyclerview"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/d_m_timeline_date" />

    <androidx.cardview.widget.CardView
        android:id="@+id/d_m_ann_card"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/d_m_recyclerview">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/d_m_ann_divider"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/d_m_ann_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/announcements"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/d_m_ann_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/d_m_ann_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintBottom_toTopOf="@+id/d_m_ann_text"
                app:layout_constraintEnd_toEndOf="@+id/d_m_ann_text"
                app:layout_constraintStart_toStartOf="@+id/d_m_ann_text"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_announcement_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/d_m_assign_card"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_marginEnd="28dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="@+id/d_m_ann_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/d_m_ann_card">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/d_m_assign_divider"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/colorGreen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/d_m_assign_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/assignments"
                android:textColor="@color/colorGreen"
                app:layout_constraintBottom_toTopOf="@+id/d_m_assign_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/d_m_assign_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:tint="@color/colorGreen"
                app:layout_constraintBottom_toTopOf="@+id/d_m_assign_text"
                app:layout_constraintEnd_toEndOf="@+id/d_m_assign_text"
                app:layout_constraintStart_toStartOf="@+id/d_m_assign_text"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_assignment_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>