<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".editor.AssignAnnounceActivity">

    <com.scwang.wave.MultiWaveHeader
        android:id="@+id/edit_assign_announce_main_actionBar"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:mwhCloseColor="@color/colorPrimaryPartial"
        app:mwhColorAlpha="0.8"
        app:mwhIsRunning="false"
        app:mwhProgress="1"
        app:mwhStartColor="@color/colorPrimaryPartial"
        app:mwhVelocity="1"
        app:mwhWaveHeight="60dp"
        app:mwhWaves="MultiWave">

    </com.scwang.wave.MultiWaveHeader>

    <TextView
        android:id="@+id/edit_assign_announce_main_title"
        style="@style/appHeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_new_announcement"
        app:layout_constraintBottom_toBottomOf="@+id/edit_assign_announce_main_actionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24000001" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_assign_announce_main_actionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/edit_assign_announce_type_text"
                    style="@style/textHeaderStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/type"
                    android:textColor="@color/colorPrimaryPartial"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/edit_assign_announce_choice_chips"
                    style="@style/Widget.MaterialComponents.ChipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:checkedChip="@id/chip1"
                    app:layout_constraintStart_toStartOf="@+id/edit_assign_announce_type_text"
                    app:layout_constraintTop_toBottomOf="@+id/edit_assign_announce_type_text"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip1"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:checked="true"
                        android:text="INDIVIDUAL" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip2"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:checked="false"
                        android:text="GROUP" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip3"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />


                </com.google.android.material.chip.ChipGroup>

                <TextView
                    android:id="@+id/edit_assign_announce_content_text"
                    style="@style/textHeaderStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/announcement"
                    android:textColor="@color/colorPrimaryPartial"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_assign_announce_choice_chips" />

                <EditText
                    android:id="@+id/edit_assign_announce_content"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimaryPartial"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="textMultiLine"
                    android:lineSpacingExtra="8sp"
                    android:singleLine="false"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/edit_assign_announce_content_text"
                    app:layout_constraintTop_toBottomOf="@+id/edit_assign_announce_content_text" />

                <Button
                    android:id="@+id/edit_assign_announce_post_button"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/button_selector"
                    android:text="Post"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/edit_assign_announce_content"
                    app:layout_constraintStart_toStartOf="@+id/edit_assign_announce_content"
                    app:layout_constraintTop_toBottomOf="@+id/edit_assign_announce_content"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>